@startuml F1BettingGame_DomainModel
!theme blueprint

' === Value Objects ===
class Money {
  - _amount : decimal
  + Amount : decimal
  + FromDecimal(amount: decimal) : Money
  + Zero() : Money
  + Add(other: Money) : Money
  + Subtract(other: Money) : Money
  + Multiply(multiplier: decimal) : Money
  + Equals(other: Money) : boolean
  + GetHashCode() : int
}

class Odds {
  - _value : decimal
  + Value : decimal
  + FromDecimal(value: decimal) : Odds
  + CalculatePayout(betAmount: Money) : Money
  + Equals(other: Odds) : boolean
  + GetHashCode() : int
}

class RaceDate {
  - _dateTime : DateTime
  + Value : DateTime
  + FromDateTime(dateTime: DateTime) : RaceDate
  + Today() : RaceDate
  + Equals(other: RaceDate) : boolean
  + GetHashCode() : int
}

' === Entities ===
class User {
  + Id : int
  + Username : string
  + Email : string
  + PasswordHash : string
  + Points : int
  + CreatedAt : DateTime
  + ProfileImageUrl : string?
  + LastLogin : DateTime?
  + IsActive : boolean
  + IsAdmin : boolean
  + RefreshToken : string?
  + RefreshTokenExpiryTime : DateTime?
  --
  + AddPoints(points: int) : void
  + DeductPoints(points: int) : void
  + HasSufficientBalance(requiredPoints: int) : boolean
  + SetRefreshToken(token: string, expiry: DateTime) : void
  + RevokeRefreshToken() : void
}

class AuthController {
  + Register(registerDto: RegisterDto) : AuthResponse
  + Login(loginDto: LoginDto) : AuthResponse
  + RefreshToken(refreshTokenDto: RefreshTokenDto) : AuthResponse
  + RevokeToken() : ActionResult
}

class JWTService {
  - _configuration : IConfiguration
  - _userManager : UserManager<User>
  --
  + GenerateJwtToken(user: User) : string
  + GenerateRefreshToken() : string
  + ValidateToken(token: string) : ClaimsPrincipal
  + GetUserIdFromToken(token: string) : string
}

class RefreshToken {
  + Token : string
  + Expires : DateTime
  + Created : DateTime
  + Revoked : DateTime?
  + ReplacedByToken : string?
  + IsExpired : boolean
  + IsActive : boolean
  --
  + Revoke() : void
}

class AuthService {
  + currentUser : BehaviorSubject<User>
  + currentUser$ : Observable<User>
  --
  + login(email: string, password: string) : Observable<AuthResponse>
  + register(userData: RegisterDto) : Observable<AuthResponse>
  + logout() : void
  + refreshToken() : Observable<AuthResponse>
  + getToken() : string
  + isLoggedIn() : boolean
}

class RegisterDto {
  + Email : string
  + Username : string
  + Password : string
  + ConfirmPassword : string
}

class LoginDto {
  + Email : string
  + Password : string
  + RememberMe : boolean
}

class AuthResponse {
  + AccessToken : string
  + RefreshToken : string
  + User : UserDto
  + ExpiresIn : int
}

class UserDto {
  + Id : string
  + Username : string
  + Email : string
  + Points : int
  + IsAdmin : boolean
}

class Race {
  + Id : int
  + Name : string
  + Date : DateTime
  + Status : RaceStatus
  + Circuit : string
  + Country : string
  + OpenF1RaceId : string
  + Season : int
  + Bets : ICollection<Bet>
  --
  + CanPlaceBets() : boolean
  + IsRaceFinished() : boolean
}

class Driver {
  + Id : int
  + Name : string
  + Country : string
  + OpenF1DriverId : string
  + TeamId : int
  + Team : Team
  + Bets : ICollection<Bet>
  --
  + GetFullName() : string
}

class Team {
  + Id : int
  + Name : string
  + Country : string
  + OpenF1TeamId : string
  + Drivers : ICollection<Driver>
  --
  + GetDrivers() : string
}

class Bet {
  + Id : int
  + UserId : int
  + RaceId : int
  + DriverId : int
  + BetType : BetType
  + Amount : decimal
  + Odds : decimal
  + PotentialWinnings : decimal
  + Status : BetStatus
  + CreatedAt : DateTime
  --
  + ValidateBet() : void
}

class Result {
  + Id : int
  + RaceId : int
  + Race : Race
  + DriverId : int
  + Driver : Driver
  + UserId : int
  + User : User
  + Position : int
  + Points : int
  + FastestLap : TimeSpan?
  + PitStopTime : TimeSpan?
  --
  + IsPodiumFinish() : boolean
  + IsPointsFinish() : boolean
}

class LeaderboardHistory {
  + Id : int
  + UserId : int
  + User : User
  + RaceId : int
  + Race : Race
  + Season : string
  + TotalPoints : int
  + Rank : int
  + CreatedAt : DateTime
}

class Notification {
  + Id : int
  + UserId : int
  + User : User
  + Title : string
  + Message : string
  + IsRead : boolean
  + CreatedAt : DateTime
  --
  + MarkAsRead() : void
}

' === Statistics DTOs ===
class EnhancedUserStatisticsDto {
  + UserId : int
  + Username : string
  + TotalBets : int
  + WinningBets : int
  + LosingBets : int
  + PushBets : int
  + WinRate : decimal
  + TotalWinnings : decimal
  + ReturnOnInvestment : decimal
  + CurrentWinStreak : int
  + CurrentLoseStreak : int
  + LongestWinStreak : int
  + FavoriteDriverId : int
  + FavoriteDriverName : string
  + AverageBetAmount : decimal
  + LargestWin : decimal
  + LargestLoss : decimal
  + LastBetDate : DateTime?
  + TotalAmountBet : decimal
  + BetsThisWeek : int
  + BetsThisMonth : int
  + Points : int
  + Rank : int
}

class UserBetStatisticsCache {
  + Id : int
  + UserId : int
  + User : User
  + TotalBets : int
  + WinningBets : int
  + LosingBets : int
  + PushBets : int
  + TotalWinnings : decimal
  + TotalAmountBet : decimal
  + CurrentWinStreak : int
  + CurrentLoseStreak : int
  + LongestWinStreak : int
  + LastUpdated : DateTime
  + FavoriteDriverId : int
  + LargestWin : decimal
  + LargestLoss : decimal
}

class BetHistoryDto {
  + BetId : int
  + RaceId : int
  + RaceName : string
  + RaceDate : DateTime
  + DriverName : string
  + TeamName : string
  + BetType : BetType
  + Amount : decimal
  + PayoutAmount : decimal?
  + Status : BetStatus
  + PlacedAt : DateTime
  + SettledAt : DateTime?
  + Odds : decimal?
  + DriverPosition : int?
}

class UserBetAnalysisDto {
  + UserId : int
  + BetTypeAnalysis : Dictionary<BetType, BetTypeAnalysisDto>
  + DriverAnalysis : Dictionary<int, DriverAnalysisDto>
  + TeamAnalysis : Dictionary<int, TeamAnalysisDto>
  + MonthlyAnalysis : MonthlyAnalysisDto[]
  + TimeOfDayAnalysis : TimeOfDayAnalysisDto
}

class BetTypeAnalysisDto {
  + TotalBets : int
  + WinningBets : int
  + WinRate : decimal
  + TotalAmount : decimal
  + TotalWinnings : decimal
  + ROI : decimal
}

class DriverAnalysisDto {
  + DriverName : string
  + TotalBets : int
  + WinningBets : int
  + WinRate : decimal
  + TotalWinnings : decimal
}

class MonthlyAnalysisDto {
  + Year : int
  + Month : int
  + TotalBets : int
  + WinningBets : int
  + TotalWinnings : decimal
}

class TimeOfDayAnalysisDto {
  + HourOfDay : int
  + TotalBets : int
  + WinningBets : int
  + WinRate : decimal
  + AverageBetAmount : decimal
}

class TeamAnalysisDto {
  + TeamName : string
  + TotalBets : int
  + WinningBets : int
  + WinRate : decimal
  + TotalWinnings : decimal
}

' === Enums ===
enum BetStatus {
  Pending
  Won
  Lost
  Canceled
}

enum BetType {
  Unknown = 0
  RaceWinner
  PodiumFinish
  Top10Finish
  FastestLap
  FastestPitStop
  DNFCount
  DriverVsDriver
  TeamVsTeam
}

enum RaceStatus {
  Scheduled
  InProgress
  Finished
  ResultsProcessed
}

enum NotificationType {
  BetPlaced
  BetWon
  BetLost
  RaceResultProcessed
  SystemMessage
}

' === Relationships ===
User "1" -- "*" Bet : places >
User "1" -- "*" Notification : receives >
User "1" -- "*" LeaderboardHistory : tracked in >
User "1" -- "*" Result : tied to >
User "1" -- "1" UserBetStatisticsCache : has >
Race "1" -- "*" Bet : for >
Race "1" -- "*" Result : has >
Race "1" -- "*" LeaderboardHistory : records >
Team "1" -- "*" Driver : has >
Driver "1" -- "*" Bet : selected in >
Driver "1" -- "*" Result : achieved by >
EnhancedUserStatisticsDto "1" -- "1" User : represents >
UserBetStatisticsCache "1" -- "1" User : caches for >
BetHistoryDto "1" -- "1" Bet : represents >
UserBetAnalysisDto "1" -- "*" BetTypeAnalysisDto : contains >
UserBetAnalysisDto "1" -- "*" DriverAnalysisDto : contains >
UserBetAnalysisDto "1" -- "*" TeamAnalysisDto : contains >
UserBetAnalysisDto "1" -- "*" MonthlyAnalysisDto : contains >
UserBetAnalysisDto "1" -- "1" TimeOfDayAnalysisDto : contains >

' === Authentication Relationships ===
AuthController "1" -- "1" JWTService : uses >
AuthController "1" -- "1" User : manages >
JWTService "1" -- "1" RefreshToken : generates >
AuthService "1" -- "1" AuthController : calls >
AuthService "1" -- "1" UserDto : manages >
RegisterDto "1" -- "1" AuthController : input >
LoginDto "1" -- "1" AuthController : input >
AuthController "1" -- "1" AuthResponse : returns >
AuthResponse "1" -- "1" UserDto : contains >

note right of Race
  Race captures a scheduled or completed
  Formula 1 event and associated betting state.
end note

@enduml